--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,23 +12,28 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
-    "@mui/icons-material": "^7.3.0",
-    "@mui/material": "^7.3.0",
+    "@mui/icons-material": "^5.18.0",
+    "@mui/material": "^5.18.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
-    "@reduxjs/toolkit": "^2.8.2",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "chartjs-plugin-annotation": "^3.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^2.30.0",
     "jwt-decode": "^4.0.0",
     "lightweight-charts": "^5.0.8",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-is": "^19.1.1",
-    "react-redux": "^9.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.30.1",
     "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
@@ -39,6 +44,7 @@
     "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.30.1",
     "@types/jwt-decode": "^2.2.1",
+    "@types/node": "^24.2.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.7.0",
